formatting code
Signed-off-by: brunopick <brunopick@gmail.com>